Don't set GELI UMA zone as UMA_ZONE_NOFREE.

That fixes memory leak on last GELI provider destroyed, introduced
in 72f98a27431. This patch was originally developed late 2019 and
the flag was necessary to prevent zone drainage under memory pressure.
Today, with f09cbea31a3f the UMA is fixed not to drain into reserves.

Discussed with:	jtl, markj
Fixes:		72f98a27431
PR:		258787